<resources>
    <string name="app_name">SampleApp</string>
    <string name="date">Date :</string>
    <string name="date1">14-02-2024</string>
    <string name="task">Task :</string>
    <string name="registration">Registration</string>
    <string name="date2">15-02-2024</string>
    <string name="validations">Validations</string>
    <string name="date3">16-02-2024</string>
    <string name="task_dashboard">Task Dashboard</string>
    <string name="date4">17-02-2024</string>
    <string name="form">Form</string>
    <string name="name_field">Enter Your Name</string>
    <string name="mobile_num_field">Enter Your Mobile Number</string>
    <string name="gender">Select Gender</string>
    <string name="fe">Female</string>
    <string name="m">Male</string>
    <string name="wifi">Turn on wifi</string>
    <string name="lang"> Languages Known</string>
    <string name="en">English</string>
    <string name="te">Telugu</string>
    <string name="hi">Hindi</string>
    <string name="formTitle">Application Form</string>





</resources>