<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"

    android:orientation="vertical"
    tools:context=".FormActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary"
            android:text="@string/formTitle"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name_field"/>

    <EditText
        android:id="@+id/et_mbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_num_field"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/gender"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_fe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fe"
            android:textColor="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/wifi"

            android:textColor="@color/black" />

        <ToggleButton

            android:id="@+id/tb_wifi"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:textOff="Off"
            android:textOn="On" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/lang"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/cb_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/en" />

    <CheckBox
        android:id="@+id/cb_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/te" />

    <CheckBox
        android:id="@+id/cb_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hi" />

    <Spinner
        android:id="@+id/spinner"
        android:outlineSpotShadowColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <AutoCompleteTextView
        android:id="@+id/act_states"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter State"

/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary"
        android:padding="10dp"
        android:text="Submit"
        android:layout_margin="10dp"
        android:textColor="@color/white"/>

</LinearLayout>